--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,24 @@
   </head>
 
   <body>
+    <div class="container">
+      <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="#">Noname_blog</a>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <%= link_to 'Новая статья', new_post_path, class: 'btn btn-outline-primary pull-xs-rignt' %>
+            <a class="nav-item nav-link active" href="<%= posts_path %>">Статьи</a>
+            <a class="nav-item nav-link" href="#">Контакты</a>
+          </div>
+        </div>
+      </nav>
+  </div>
 
-  <%= link_to 'Все статьи', posts_path %>
-  |
-  <%= link_to 'Новая статья', new_post_path %>
-
+  <div class="container main">
     <%= yield %>
-  </body>
+  </div>
+ </body>
 </html>
