Error output and flash

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,17 @@
   </div>
 
   <div class="container main">
-    <%= yield %>
+    <div class= "row">
+      <div class="col-md-12">
+        <% flash.each do |name, message| %>
+          <div class="alert alert-<%= name %>">
+            <%= message %>
+          </div>
+        <% end %>
+    </div>
   </div>
- </body>
+
+    <%= yield %>
+
+  </body>
 </html>
