--- a/app/views/posts/_disqus.html.erb
+++ b/app/views/posts/_disqus.html.erb
@@ -11,15 +11,15 @@ this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your pag
 };
 */
 var disqus_config = function () {
-  <%# <1%# this.page.url = 'http://localhost.com'<%= request.original_fullpath %2>; %>
-  this.page.url = 'http://localhost.com'<%= request.original_fullpath %>;
-  this.page.identifier = '<%= @post.id %>';
-};
-(function() { // DON'T EDIT BELOW THIS LINE
-  var d = document, s = d.createElement('script');
-  s.src = 'https://amishurin.disqus.com/embed.js';
-  s.setAttribute('data-timestamp', +new Date());
-  (d.head || d.body).appendChild(s);
+    <%# <1%# this.page.url = '<%= request.base.url + request.original_fullpath %2>'; %>
+    this.page.url = 'http://localhost.com<%= request.original_fullpath %>';
+    this.page.identifier = '<%= @post.id %>';
+  };
+  (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = '//amishurin.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
   })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
