--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,16 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="#">Noname_blog</a>
+        <%= link_to 'Новая статья', new_post_path, class: 'btn btn-outline-primary pull-xs-rignt' %>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <a class="nav-item nav-link active" href="<%= root_path %>">Все статьи</a>
           <div class="navbar-nav">
-            <%= link_to 'Новая статья', new_post_path, class: 'btn btn-outline-primary pull-xs-rignt' %>
-            <a class="nav-item nav-link active" href="<%= posts_path %>">Статьи</a>
+           <% Category.order(:name).roots.each do |category| %>
+           <li class="nav-item <%= 'active' if current_page?(category_path(category)) %> ">
+             <%= link_to category.name, category, class: 'nav-link' %>
+           </li>
+            <% end %>
+
             <a class="nav-item nav-link" href="#">Контакты</a>
           </div>
         </div>
@@ -41,6 +47,7 @@
           <%= yield %>
         </div>
         <div class="col-md-3">
+        <%= render 'shared/submenu' %>
 
           <div class="tag_cloud">
             <h2>Теги</h2>
