--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,44 +10,58 @@
 
   <body>
     <div class="container">
-      <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-brand" href="#">Noname_blog</a>
-        <%= link_to 'Новая статья', new_post_path, class: 'btn btn-outline-primary pull-xs-rignt' %>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <a class="nav-item nav-link active" href="<%= root_path %>">Все статьи</a>
-          <div class="navbar-nav">
-           <% Category.order(:name).roots.each do |category| %>
-           <li class="nav-item <%= 'active' if current_page?(category_path(category)) %> ">
-             <%= link_to category.name, category, class: 'nav-link' %>
-           </li>
-            <% end %>
+      <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+        <a class="navbar-brand" href="#">No name blog</a>
 
-            <a class="nav-item nav-link" href="#">Контакты</a>
-          </div>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item <%= 'active' if current_page?(root_path) || current_page?(posts_path) %>">
+              <a class="nav-link" href="<%= root_path %>">Все статьи</a>
+            </li>
+            <% Category.order(:name).roots.each do |category| %>
+              <li class="nav-item <%= 'active' if current_page?(category_path(category)) %>">
+                <%= link_to category.name, category, class: 'nav-link' %>
+              </li>
+            <% end %>
+          </ul>
+
+          <ul class="navbar-nav pull-xs-right">
+            <% if user_signed_in? %>
+              <li class="nav-item">
+                <%= link_to "Выход", destroy_user_session_path, method: :delete, class: "nav-link" %>
+              </li>
+            <% else %>
+              <li class="nav-item">
+                <%= link_to "Вход", new_user_session_path, class: "nav-link" %>
+              </li>
+              <li class="nav-item">
+                <%= link_to "Регистрация", new_user_registration_path, class: "nav-link" %>
+              </li>
+            <% end %>
+            </li>
+          </ul>
         </div>
       </nav>
-  </div>
-
-  <div class="container main">
-    <div class= "row">
-      <div class="col-md-12">
-        <% flash.each do |name, message| %>
-          <div class="alert alert-<%= name %>">
-            <%= message %>
-          </div>
-        <% end %>
     </div>
-  </div>
 
-    <div class="row">
+    <div class="container main">
+      <div class="row">
+        <div class="col-md-12">
+          <% flash.each do |name, message| %>
+            <div class="alert <%= bootstrap_class_for(name) %>">
+              <button class="close" data-dismiss="alert">&times;</button>
+              <%= message %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+
+      <div class="row">
         <div class="col-md-9">
           <%= yield %>
         </div>
         <div class="col-md-3">
-        <%= render 'shared/submenu' %>
+          <%= render 'shared/submenu' %>
 
           <div class="tag_cloud">
             <h2>Теги</h2>
