--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
 
   <div class= "form-group">
-    <%= f.submit t('.submit', action: @category.new_record? ? 'Создать' : 'Изменить'), class: 'btn btn-outline-primary' %>
+    <%= f.submit t('.submit', action: @category.new_record? ? t('common.create'): t('common.edit')), class: 'btn btn-outline-primary' %>
     <%= link_to t('common.back'), :back, class: 'btn btn-outline-secondary'%>
   </div>
 <% end %>
